# AI-Multi-Agent-Autonomous-Task-Execution-Platform-Agent-Negotiation-Human-in-Loop-

./: Makefile  README.md  pyproject.toml
apps/: __init__.py
apps/agent_runtime/: __init__.py
apps/api_gateway/: __init__.py  app.py  config.py  dependencies.py  lifecycle.py  main.py
apps/evaluation_service/: __init__.py
apps/memory_service/: __init__.py
apps/orchestrator_service/: __init__.py
apps/scheduler_service/: __init__.py
apps/worker_service/: __init__.py
ci_cd/github_actions/: build.yml  deploy.yml  lint.yml  test.yml
ci_cd/pre-commit/: __init__.py  hooks.yaml  lint_rules.yaml
ci_cd/release/: __init__.py  changelog_generator.py  versioning.py
core/: __init__.py
core/agents/: __init__.py  registry.py
core/evaluation/: __init__.py
core/memory/: __init__.py  episodic_memory.py  memory_manager.py  memory_router.py  semantic_memory.py  working_memory.py
core/orchestration/: __init__.py
core/prompts/: __init__.py  agent_prompts.py  prompt_templates.py  system_prompts.py
core/tools/: __init__.py  tool_registry.py
docs/: __init__.py
docs/adr/: __init__.py  adr-001-architecture.md
docs/agents/: __init__.py  agent_design.md
docs/api/: __init__.py  api_reference.md
docs/architecture/: __init__.py  human_in_loop_design.md  scaling.md  sequence_diagrams.md  system_design.md
docs/runbooks/: __init__.py  incident_response.md
infrastructure/: __init__.py
interfaces/: __init__.py
platform/: __init__.py
scripts/: __init__.py  seed_data.sh  setup.sh  start_api.sh  start_orchestrator.sh  start_worker.sh
tests/: __init__.py
(+112 files in other folders)
