[tool.poetry]
name = "ai-autonomous-agent-platform"
version = "0.1.0"
description = "Production-grade autonomous AI agent orchestration platform"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web / API
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# Async & HTTP
httpx = "^0.27.0"
aiohttp = "^3.9.5"

# Data & Validation
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

# Database
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"

# Redis / Queue
redis = "^5.0.4"
rq = "^1.15.1"

# Vector DB
faiss-cpu = "^1.8.0"
weaviate-client = "^3.26.0"
pinecone-client = "^3.0.0"

# LLM
openai = "^1.30.0"

# Observability
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
prometheus-client = "^0.20.0"

# Security
python-jose = "^3.3.0"
cryptography = "^42.0.5"

# CLI
typer = "^0.12.3"
rich = "^13.7.1"

# Utilities
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"

# =========================
# DEV DEPENDENCIES
# =========================
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
bandit = "^1.7.6"

pre-commit = "^3.7.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"